--- a/src/uLearn.Web/Views/Shared/_Layout.cshtml
+++ b/src/uLearn.Web/Views/Shared/_Layout.cshtml
@@ -95,11 +95,9 @@
 
 	<script>
 		$(function () {
-			$(".load-content")
-				.each(
-					function () {
-						$(this).load($(this).data("url"));
-					});
+			$(".load-content").each(function () {
+				$(this).load($(this).data("url"));
+			});
 		});
 	</script>
 	
