--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -448,13 +448,8 @@ p {
 }
 
 
-.rates-bar {
-	width: 100%;
-	margin-bottom: -11px;
-	margin-left: 0 !important;
-}
-
 .ctrl-group {
+	margin-top: 10px;
 	margin-left: 0 !important;
 }
 
@@ -1466,10 +1461,32 @@ h1 .copy-group-link {
 	display: none;
 }
 
+.exercise__add-review__top-comments {
+	padding-left: 25px;
+}
+
 .exercise__top-review-comments .comment {
 	white-space: nowrap;
 	text-overflow: ellipsis;
 	overflow: hidden;
+	margin-left: -15px;
+}
+
+.exercise__top-review-comments .comment .remove-link {
+	visibility: hidden;
+	display: inline-block;
+	margin-right: 2px;
+	color: #f66;
+	text-decoration: none;
+	font-size: 16px;
+}
+
+.exercise__top-review-comments .comment:hover .remove-link {
+	visibility: visible;
+}
+
+.exercise__top-review-comments .comment .remove-link:hover {
+	font-weight: 700;
 }
 
 .code-review + .CodeMirror {
