--- a/src/uLearn.Web/Views/Course/SlideHtml.cshtml
+++ b/src/uLearn.Web/Views/Course/SlideHtml.cshtml
@@ -121,7 +121,7 @@
 @helper Block(YoutubeBlock block, BlockRenderContext context, HtmlHelper Html)
 {
 	<div class="video-container">
-		<iframe class="embedded-video" width="864" height="480" src="https://www.youtube.com/embed/@block.VideoId" frameborder="0" allowfullscreen></iframe>
+		<div class="youtube-video" data-width="864" data-height="480" data-video-id="@block.VideoId" data-autoplay="@context.Autoplay.ToString().ToLower()"></div>
 	</div>
 	<div>
 		<a href="javascript://" class="popover-trigger pull-right"
@@ -214,7 +214,7 @@
 
 			@Html.Partial(
 				"~/Views/Exercise/_ExerciseScoreForm.cshtml",
-				new ExerciseScoreFormModel(context.Course.Id, (ExerciseSlide) context.Slide, checking, context.GroupsIds, context.VersionId == null || checking.Submission.Id == context.VersionId))
+				new ExerciseScoreFormModel(context.Course.Id, (ExerciseSlide) context.Slide, checking, context.GroupsIds, context.VersionId == null || checking.Submission.Id == context.VersionId && ! context.IsManualCheckingReadonly))
 		}
 	</div>
 }
