--- a/src/uLearn.Web/Views/Exercise/_ExerciseReview.cshtml
+++ b/src/uLearn.Web/Views/Exercise/_ExerciseReview.cshtml
@@ -1,4 +1,5 @@
-﻿@using uLearn.Web.Extensions
+﻿@using Microsoft.AspNet.Identity
+@using uLearn.Web.Extensions
 @model ExerciseCodeReviewModel
 	
 <div class="exercise__review"
@@ -21,7 +22,10 @@
 				строка @(Model.Review.StartLine + 1)
 			</span>
 		}
-		@if (Model.ManualChecking != null)
+		@{
+			var canDelete = Model.Review.AuthorId == User.Identity.GetUserId() || User.HasAccessFor(Model.ManualChecking.CourseId, CourseRole.CourseAdmin);
+		}
+		@if (Model.ManualChecking != null && canDelete)
 		{
 			<span class="close exercise__delete-review"
 				  title="Удалить комментарий"
