--- a/src/uLearn.Web/Views/Exercise/_ExerciseScoreForm.cshtml
+++ b/src/uLearn.Web/Views/Exercise/_ExerciseScoreForm.cshtml
@@ -32,51 +32,60 @@
 	</div>
 </div>
 
-<form method="POST" action="@Url.Action("ScoreExercise", "Exercise", new { recheck = Model.Checking.IsChecked })" class="exercise__score-form" data-submission-id="@Model.Checking.Submission.Id">
-	<input type="hidden" name="id" value="@Model.Checking.Id" />
-	<input type="hidden" name="errorUrl" value="@Url.RouteUrl("Course.SlideById", new { Model.CourseId, slideId = Model.Slide.Url, CheckQueueItemId = Model.Checking.Id, group = Model.GroupsIdsJoined })&amp;error=" />
-	<input type="hidden" name="nextUrl" value="@Url.Action("ManualExerciseCheckingQueue", "Admin", new { Model.CourseId, group = Model.GroupsIdsJoined, done = Model.Checking.IsChecked })" />
+<div class="row">
+	<div class="col-xs-12 col-md-6">
+		<form method="POST" action="@Url.Action("ScoreExercise", "Exercise", new { recheck = Model.Checking.IsChecked })" class="exercise__score-form" data-submission-id="@Model.Checking.Submission.Id">
+			<input type="hidden" name="id" value="@Model.Checking.Id" />
+			<input type="hidden" name="errorUrl" value="@Url.RouteUrl("Course.SlideById", new { Model.CourseId, slideId = Model.Slide.Url, CheckQueueItemId = Model.Checking.Id, group = Model.GroupsIdsJoined })&amp;error=" />
+			<input type="hidden" name="nextUrl" value="@Url.Action("ManualExerciseCheckingQueue", "Admin", new { Model.CourseId, group = Model.GroupsIdsJoined, done = Model.Checking.IsChecked })" />
 
-	<h4 class="@(Model.IsCurrentSubmissionChecking ? "" : "text-muted")">Оцените работу (максимальный балл @block.MaxReviewScore)</h4>
-	<div class="exercise__score">
-		<div class="btn-group" role="group">
-			@{
-				var isPercentScoreActive = false;
-			}
-			@foreach (var scorePercent in new[] { 0, 25, 50, 75, 100 })
+			@if (Model.Checking.IsLocked && !Model.Checking.IsLockedBy(User.Identity))
 			{
-				var score = block.MaxReviewScore * scorePercent / 100;
-				/* For max review score < 4 we can not define percentage score,
-				 * because they are the same (0% of 2 is equal to 25% of 2)
-				 */
-				var isActive = Model.Checking.IsChecked && Model.Checking.Score == score && block.MaxReviewScore >= 4;
-				isPercentScoreActive = isPercentScoreActive || isActive;
-				<button type="button" class="btn btn-default @(isActive ? "active" : "")" data-value="@score" @IsScoreFormActive()>@scorePercent%</button>
+				<div class="alert alert-info mt10 ">Эта работа проверяется преподавателем @Model.Checking.LockedBy.VisibleName</div>
 			}
-		</div>
-		<div class="ib">
-			<a href="#" class="exercise__other-score-link internal-page-link @(isPercentScoreActive ? "" : "active") @(Model.IsCurrentSubmissionChecking ? "" : "text-muted")">Другая оценка</a>
-			@{
-				var otherScoreInputDisplay = Model.Checking.IsChecked && !isPercentScoreActive ? "" : "display: none";
+
+			<h4 class="@(Model.IsCurrentSubmissionChecking ? "" : "text-muted")">Оцените работу (максимальный балл @block.MaxReviewScore)</h4>
+			<div class="exercise__score">
+				<div class="btn-group" role="group">
+					@{
+						var isPercentScoreActive = false;
+					}
+					@foreach (var scorePercent in new[] { 0, 25, 50, 75, 100 })
+					{
+						var score = block.MaxReviewScore * scorePercent / 100;
+						/* For max review score < 4 we can not define percentage score,
+					 * because they are the same (0% of 2 is equal to 25% of 2)
+					 */
+						var isActive = Model.Checking.IsChecked && Model.Checking.Score == score && block.MaxReviewScore >= 4;
+						isPercentScoreActive = isPercentScoreActive || isActive;
+						<button type="button" class="btn btn-default @(isActive ? "active" : "")" data-value="@score" @IsScoreFormActive()>@scorePercent%</button>
+					}
+				</div>
+				<div class="ib">
+					<a href="#" class="exercise__other-score-link internal-page-link @(isPercentScoreActive ? "" : "active") @(Model.IsCurrentSubmissionChecking ? "" : "text-muted")">Другая оценка</a>
+					@{
+						var otherScoreInputDisplay = Model.Checking.IsChecked && !isPercentScoreActive ? "" : "display: none";
+					}
+					<input type="number" class="form-control" style="@otherScoreInputDisplay" min="0" max="@block.MaxReviewScore" name="exerciseScore" required="required"
+						   value="@(Model.Checking.IsChecked ? Model.Checking.Score.ToString() : "")" />
+				</div>
+			</div>
+
+			<div class="checkbox checkbox-default">
+				<input data-val="true" id="prohibitFurtherReview" name="prohibitFurtherReview" type="checkbox" value="true" @(Model.Checking.IsChecked && !Model.Checking.ProhibitFurtherManualCheckings ? "" : "checked") @IsScoreFormActive() />
+				<label for="prohibitFurtherReview">
+					Не принимать больше код-ревью у этого студента
+				</label>
+			</div>
+
+			<input type="submit" class="btn @(Model.Checking.IsChecked ? "btn-primary" : "btn-default")" value="Сохранить и вернуться" @IsScoreFormActive() />
+
+			@if (!Model.Checking.IsChecked)
+			{
+				<input type="submit" class="btn btn-primary" value="Сохранить и перейти к следующему"
+					   data-url="@Url.Action("CheckNextExerciseForSlide", "Admin", new { Model.CourseId, slideId = Model.Slide.Id, group = Model.GroupsIdsJoined })"
+					   onclick="$('[name=nextUrl]').val($(this).data('url'))" @IsScoreFormActive() />
 			}
-			<input type="number" class="form-control" style="@otherScoreInputDisplay" min="0" max="@block.MaxReviewScore" name="exerciseScore" required="required"
-				   value="@(Model.Checking.IsChecked ? Model.Checking.Score.ToString() : "")" />
-		</div>
+		</form>
 	</div>
-
-	<div class="checkbox checkbox-default">
-		<input data-val="true" id="prohibitFurtherReview" name="prohibitFurtherReview" type="checkbox" value="true" @(Model.Checking.IsChecked && !Model.Checking.ProhibitFurtherManualCheckings ? "" : "checked") @IsScoreFormActive()/>
-		<label for="prohibitFurtherReview">
-			Не принимать больше код-ревью у этого студента
-		</label>
-	</div>
-
-	<input type="submit" class="btn @(Model.Checking.IsChecked ? "btn-primary" : "btn-default")" value="Сохранить и вернуться" @IsScoreFormActive()/>
-
-	@if (!Model.Checking.IsChecked)
-	{
-		<input type="submit" class="btn btn-primary" value="Сохранить и перейти к следующему"
-			   data-url="@Url.Action("CheckNextExerciseForSlide", "Admin", new { Model.CourseId, slideId = Model.Slide.Id, group = Model.GroupsIdsJoined })"
-			   onclick="$('[name=nextUrl]').val($(this).data('url'))" @IsScoreFormActive()/>
-	}
-</form>
+</div>
