--- a/src/uLearn.Web/Views/SlideNavigation/PrevNextButtons.cshtml
+++ b/src/uLearn.Web/Views/SlideNavigation/PrevNextButtons.cshtml
@@ -6,11 +6,11 @@
 	data-isaccepted="@(Model.NextIsAcceptedSolutions ? "true" : "")">
 	<a class="btn btn-default no-rounds ctrl-group"
 		id="prev_slide_button"
-		href="@Url.RouteUrl("Course.SlideById", new {courseId = Model.CourseId, slideId = Model.PrevSlide != null ? Model.PrevSlide.Url : ""})">Назад</a>
-	<a class="btn btn-default @(Model.IsGuest ? "" : "block-next") no-rounds ctrl-group next_button"
+		href="@Url.RouteUrl("Course.SlideById", new {courseId = Model.CourseId, slideId = Model.PrevSlide != null ? Model.PrevSlide.Url : ""})">← Назад</a>
+	<a class="btn btn-default no-rounds ctrl-group next_button"
 		id="next_solutions_button"
-		href="@Url.Action("AcceptedSolutions", "Course", new {courseId = Model.CourseId, slideId = Model.SlideId})">Далее</a>
-	<a class="btn btn-default @(Model.IsGuest ? "" : "block-next") no-rounds ctrl-group next_button"
+		href="@Url.Action("AcceptedSolutions", "Course", new {courseId = Model.CourseId, slideId = Model.SlideId})">Решения других участников →</a>
+	<a class="btn btn-default no-rounds ctrl-group next_button"
 		id="next_slide_button"
-		href="@Url.RouteUrl("Course.SlideById", new {courseId = Model.CourseId, slideId = Model.NextSlide != null ? Model.NextSlide.Url : ""})">Далее</a>
+		href="@Url.RouteUrl("Course.SlideById", new {courseId = Model.CourseId, slideId = Model.NextSlide != null ? Model.NextSlide.Url : "", autoplay = 1})">Следующий слайд →</a>
 </div>
