First version of grader clients

--- a/src/uLearn.Web/Views/Course/CourseInstructorNavbar.cshtml
+++ b/src/uLearn.Web/Views/Course/CourseInstructorNavbar.cshtml
@@ -17,6 +17,7 @@
 				<li>@Html.ActionLink("Пользователи", "Users", "Admin", new { Model.CourseId }, new { })</li>
 				<li>@Html.ActionLink("Загрузить пакет", "Packages", "Admin", new { Model.CourseId }, new { })</li>
 				<li>@Html.ActionLink("Модули", "Units", "Admin", new { Model.CourseId }, new { })</li>
+				<li>@Html.ActionLink("Клиенты грейдера", "Clients", "Grader", new { Model.CourseId }, new { })</li>
 			}
 			<li class="divider" role="separator"></li>
 			<li>@Html.ActionLink("Комментарии", "Comments", "Admin", new { Model.CourseId }, new { })</li>
