--- a/src/uLearn.Web/Views/Analytics/CourseStatistics.cshtml
+++ b/src/uLearn.Web/Views/Analytics/CourseStatistics.cshtml
@@ -66,7 +66,8 @@
 									<span class="caret"></span>
 								</button>
 								<ul class="dropdown-menu pull-right">
-									<li><a href="@Url.Action("ExportCourseStatistics")" data-replace-action="@Url.Action("ExportCourseStatistics")">Скачать как XLSX</a></li>
+									<li><a href="@Url.Action("ExportCourseStatisticsAsXlsx")" data-replace-action="@Url.Action("ExportCourseStatisticsAsXlsx")">Скачать как xlsx</a></li>
+									<li><a href="@Url.Action("ExportCourseStatisticsAsJson")" data-replace-action="@Url.Action("ExportCourseStatisticsAsJson")">Скачать как json</a></li>
 								</ul>
 							</div>
 						</div>
