--- a/src/uLearn.Web/Views/Notifications/Index.cshtml
+++ b/src/uLearn.Web/Views/Notifications/Index.cshtml
@@ -36,13 +36,13 @@
 		{
 			<tr>
 				<td>
-					@notificationType.HumanName
+					@notificationType.GetGroupName()
 				</td>
 				@foreach (var transport in Model.Transports)
 				{
 					<td>
 						@{
-							var settings = Model.TransportsSettings[Tuple.Create(transport.Id, notificationType.Type)];
+							var settings = Model.TransportsSettings[Tuple.Create(transport.Id, notificationType)];
 							var frequency = settings == null ? NotificationSendingFrequency.Disabled : settings.Frequency;
 
 							<div class="btn-group">
