--- a/src/uLearn.Web/Views/Course/CourseInstructorNavbar.cshtml
+++ b/src/uLearn.Web/Views/Course/CourseInstructorNavbar.cshtml
@@ -9,7 +9,7 @@
 			<li>@Html.RouteLink("Просмотр курса", "Course.Slide", new { Model.CourseId }, new { })</li>
 			<li class="divider" role="separator"></li>
 			<li>@Html.ActionLink("Группы", "Groups", "Admin", new { Model.CourseId }, new { })</li>
-			<li><a href="@Url.Action("CourseStatistics", "Analytics", new { Model.CourseId })">Ведомость курса <sup>&beta;</sup></a></li>
+			<li><a href="@Url.Action("CourseStatistics", "Analytics", new { Model.CourseId })">Ведомость курса</a></li>
 			<li>@Html.ActionLink("Ведомость модуля", "UnitStatistics", "Analytics", new { Model.CourseId }, new { })</li>
 			<li>@Html.ActionLink("Сертификаты", "Certificates", "Admin", new { Model.CourseId }, new { })</li>
 			@if (User.HasAccessFor(Model.CourseId, CourseRole.CourseAdmin))
