Send notifications via telegram Send notifications by default frequencies Don't send notification to initiator New Notificatoins.Service project

--- a/src/uLearn.Web/Views/Notifications/Index.cshtml
+++ b/src/uLearn.Web/Views/Notifications/Index.cshtml
@@ -28,7 +28,7 @@
 			<th>
 				Добавить: <br/>
 				<a href="#" class="internal-page-link" data-toggle="modal" data-target="#notification-settings__add-mail-transport__modal">почту</a> <br/>
-				<a href="#" class="internal-page-link">телеграм</a>
+				<a href="#" class="internal-page-link" data-toggle="modal" data-target="#notification-settings__add_telegram-transport__modal">телеграм</a>
 			</th>
 		</tr>
 		</thead>
@@ -79,6 +79,22 @@
 						<button class="btn btn-success copy-group-button">Добавить</button>
 					</div>
 				}
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="notification-settings__add-transport-transport__modal modal fade" id="notification-settings__add-transport-transport__modal">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+				<h4 class="modal-title">Добавить телеграм</h4>
+			</div>
+			<div class="modal-body">
+				<p>
+					Чтобы получать уведомления в&nbsp;телеграм, напишите нашему боту <a href="https://t.me/ulearn_bot">@@ulearn_bot</a>.
+				</p>
 			</div>
 		</div>
 	</div>
