--- a/src/ulearn.Web/Views/Notifications/SuggestMailTransport.cshtml
+++ b/src/ulearn.Web/Views/Notifications/SuggestMailTransport.cshtml
@@ -21,7 +21,7 @@
                     <a href="https://t.me/ulearn_bot">@@ulearn_bot</a>.
                 </p>
                 <p>
-                    <a class="btn btn-large btn-primary" href="@Url.Action("EnableNotificationTransport", "Notifications", new { transportId = Model.Transport.Id, enable = true })" target="_blank">Получать новости на&nbsp;почту</a>
+                    <a class="btn btn-large btn-primary" href="@Url.Action("EnableNotificationTransport", "Notifications", new { transportId = Model.Transport.Id, enable = true })">Получать новости на&nbsp;почту</a>
                 </p>
                 <p>
                     Всегда ваши, <br />команда ulearn.me. <br />Пишите нам на <a href="mailto:support@ulearn.me">support@ulearn.me</a>.
