--- a/src/uLearn.Web/Views/Course/SlideHtml.cshtml
+++ b/src/uLearn.Web/Views/Course/SlideHtml.cshtml
@@ -1,6 +1,7 @@
 ﻿@* Generator: MvcHelper GeneratePrettyNames: true DisableLinePragmas: true *@
 @using Database.Models
 @using uLearn
+@using uLearn.Extensions
 @using uLearn.Model.Blocks
 @using uLearn.Quizes
 @using uLearn.Web.Controllers
