--- a/src/uLearn.Web/Views/Exercise/Submission.cshtml
+++ b/src/uLearn.Web/Views/Exercise/Submission.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Database.Extensions
 @using Database.Models
 @using uLearn
+@using uLearn.Extensions
 @using uLearn.Web.Controllers
 @using uLearn.Web.Extensions
 @using uLearn.Web.Views.Course
@@ -54,15 +55,7 @@
 			else if (Model.ReviewState == ExerciseReviewState.Reviewed)
 			{
 				var score = Model.SubmissionSelectedByUser.ManualCheckings.Max(c => c.Score);
-				var pluralizedScore = score.PluralizeInRussian(new RussianPluralizationOptions
-				{
-					One = "балл",
-					Two = "балла",
-					Five = "баллов",
-					Gender = Gender.Male,
-					hideNumberOne = false,
-					smallNumbersAreWords = false,
-				});
+				var pluralizedScore = score.PluralizeInRussian(RussianPluralizationOptions.Score);
 				if (Model.InstructorView)
 				{
 					status = string.Format("Все тесты пройдены, код <a href=\"{0}\" title=\"Отредактировать код-ревью\">проверен преподавателем</a> ({1})",
